tests/fixtures/invalid/str_sub_bytes.py
# Cannot subtract Str and Bytes
x: str = "hello" - b"hello"
